--- a/home.html
+++ b/home.html
@@ -5,15 +5,19 @@
 	<title>The King's Logic Puzzle: An Interactive Logic Game</title>
 </head>
 <body>
+	<div class="header">
 	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
 	<h2>Introduction</h2>
+	</div>
 	<p class="prose">Once upon a time, in a faraway kingdom, a cruel king ruled the land with an iron fist. Despite his seemingly unlimited power over his subjects, the fear they had for him made them terrible performers in his royal court, so he quickly ran low on entertainment options. <br> 
 	<br>
 	The king's favorite form of entertainment was the waging of war on neighboring kingdoms, which he tried to avoid given that international conventions prohibited declaring war simply to get realistic, live-action, high-stakes "Contest of Expensive Chairs" scenarios. However, running low on entertainment options, he has been considering drafting citizens from your village for a new war. <br>
 	<br>
 	As the smartest citizen of your village, you had a wondrous idea! You can save the citizens from a pointless war if you can convince him to trust you as an advisor. The king does not believe in your intelligence, and so he has proposed a challenge to you. If you do not accept, you and your village will join a war that gets significantly less coherent in plot after the source material of the books runs out, and many of you will die to an admittedly beautiful soundtrack. If you accept and win, you can make a successful life for yourself as the king's advisor and provide a voice of reason that protects the people; however, if you accept and lose, the king will make an ominous example of your insolence and refuses to provide further clarification at this point...</p>
-	<p class="question">Will you attempt the king's challenge for the sake of your country?</p>
-	<button type="button" class="proceed" onclick="location.href='rules.html'">Yes!</button>
-	<button type="button" class="proceed" onclick="location.href='ending1.html'">No...</button>
+	<div class="basic question">
+		Will you attempt the king's challenge for the sake of your country?</p>
+		<button type="button" class="proceed" onclick="location.href='rules.html'">Yes!</button>
+		<button type="button" class="proceed" onclick="location.href='ending1.html'">No...</button>
+	</div>
 </body>
 </html>
