--- a/partialsuccess.html
+++ b/partialsuccess.html
@@ -9,7 +9,7 @@
 	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
 	<h2>Congratulations-ish</h2>
 	<p class="prose"> ***MEDIUM HAPPILY EVER AFTER***</p>
-	<p class="question">Do you want to try again? (please note that the fake diamond and its weight changes every time you restart)</p>
-	<button type="button" class="proceed" onclick="location.href='home.html'">Yes!</button>
+	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
+	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
 </body>
 </html>
