--- a/day2.html
+++ b/day2.html
@@ -14,14 +14,16 @@
 		translatefake(enc);
 		console.log(placements);
 	</script>
-	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
-	<h2>Day 2</h2>
+	<div class="header">
+		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h2>Day 2</h2>
+	</div>
 	<p class="prose">You spent the rest of yesterday enjoying the comforts of the castle, fairly confident that you knew what to do for the remaining two days. Although you couldn't exactly explore due to your armed guard, the rooms you were given to stay in had all sorts of new luxuries, and the food brought to your room was delicious. Only at the end of the night did you realize you really weren't fully prepared for the next day, so you didn't sleep much last night as you tried to make sure you were prepared going forward. The guards seem to like you (although they refuse to speak to you) so they brought you a strange, bitter brown drink and now you haven't slept all night and are talking very quickly but feel like you have this under control! Everything will be fine! You also added a lot of sugar to it and had more this morning! <br>
 	<br>
 	Anyway, you get to the throne room and decide to try and talk to people. <i><b>INSERT MORE PLOT HERE</b></i></p>
 	<p class="basic">The twelve diamonds are labeled from 1 to 12. You may place each diamond on the left side, the right side, or not on the scale at all. When you are done, scroll down and press the "Done!" button.</p>
-	<div class="row">
-		<div class="column left" style="background-color:#aaa;">
+	<div class="row" style="text-align:center">
+		<div class="column left">
 			<h2>All Diamonds</h2>
 			<div class="diamondchoices">
 				<img src="images/diamond.png" height=30 style="display:inline-block; vertical-align: middle">
@@ -108,19 +110,22 @@
 				<button type="button" id="omit12" class = "offbutton" onclick="omit(12)">Leave Out</button>
 			</div>
 		</div>
-		<div class="column right" style="background-color:#bbb;">
+		<div class="column right">
 			<h2>Left Side</h2>
-			<p id="leftlist"></p>
+			<p class="diamondlist" id="leftlist"></p>
 		</div>
-		<div class="column right" style="background-color:#bbb;">
+		<div class="column right">
 			<h2>Right Side</h2>
-			<p id="rightlist"></p>
+			<p class="diamondlist" id="rightlist"></p>
 		</div>
-		<div class="column right" style="background-color:#bbb;">
+		<div class="column right">
 			<h2>Leave Out</h2>
-			<p id="omitlist"></p>
+			<p class="diamondlist" id="omitlist"></p>
+		</div>
 		</div>
 	</div>
-	<button type="button" class="proceed" id="submit" onclick="var direction = calculate(enc); location.href=('day2results.html?enc='+enc+'&d='+btoa(direction))">Done!</button>
+	<div class="question" style="margin: 20px">
+		<button type="button" class="proceed" id="submit" onclick="var direction = calculate(enc); location.href=('day2results.html?enc='+enc+'&d='+btoa(direction))">Done!</button>
+	</div>
 </body>
 </html>
