--- a/day3results.html
+++ b/day3results.html
@@ -6,19 +6,22 @@
 	<script src="index.js"></script>
 </head>
 <body>
-	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
-	<h2>Day 3 Results</h2>
-	<p class="prose">The court holds its breath, as do you. The scale wobbles back and forth, and time seems to slow as the movements get smaller and smaller. The difference between the weights of the twelve diamonds are impossibly small to the human touch... </p>
-	<div id="left-heavier" style="display: none;">
-		<p class="prose">But the theatrical size of the scale makes it clear enough that <b>the left side is heavier than the right</b>. You notice that the left arm falls a head lower than the right, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.</p>
+	<div class="header">
+		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h2>Day 3 Results</h2>
 	</div>
-	<div id="right-heavier" style="display: none;">
-		<p class="prose">But the theatrical size of the scale makes it clear that <b>the right side is heavier than the left</b>. You notice that the right arm falls a head lower than the left, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.</p>
-	</div>
-	<div id="balanced-scale" style="display: none;">
-		<p class="prose">And yet, the scales remain level. Scientists from a range of countries carefully approach, pulling out all sorts of instruments to determine whether the two sides truly are equal in weight. The king narrows his eyes, suspecting that you may have cheated, but how? The judge's brow furrows.</p>
-		<p class="prose">The scientists announce that the scales are level, and <b>the left and right sides are equal in weight</b>. You finally take in a breath that you may have set a record holding, but the king is thrilled with the drama. He orders the guards to return you to your room to plan for the next day but to bring you some mysterious and fragrant invention called "soap," one of the new and innovative luxuries you could enjoy as his advisor.</p>
-	</div>
+	<p class="prose">The court holds its breath, as do you. The scale wobbles back and forth, and time seems to slow as the movements get smaller and smaller. The difference between the weights of the twelve diamonds are impossibly small to the human touch... <br><br>
+	<span id="left-heavier" style="display: none;">
+		But the theatrical size of the scale makes it clear enough that <b>the left side is heavier than the right</b>. You notice that the left arm falls a head lower than the right, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.
+	</span>
+	<span id="right-heavier" style="display: none;">
+		But the theatrical size of the scale makes it clear that <b>the right side is heavier than the left</b>. You notice that the right arm falls a head lower than the left, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.
+	</span>
+	<span id="balanced-scale" style="display: none;">
+		And yet, the scales remain level. Scientists from a range of countries carefully approach, pulling out all sorts of instruments to determine whether the two sides truly are equal in weight. The king narrows his eyes, suspecting that you may have cheated, but how? The judge's brow furrows.<br><br>
+		The scientists announce that the scales are level, and <b>the left and right sides are equal in weight</b>. You finally take in a breath that you may have set a record holding, but the king is thrilled with the drama. He orders the guards to return you to your room to plan for the next day but to bring you some mysterious and fragrant invention called "soap," one of the new and innovative luxuries you could enjoy as his advisor.
+	</span>
+	</p>
 	<script>
 		var fakeStartsFrom = window.location.href.indexOf("?enc=")+5;
 		var fakeEndsAt = window.location.href.indexOf("&d=");
@@ -40,6 +43,6 @@
 				break;
 		}
 	</script>
-	<button type="button" class="proceed" onclick="location.href=('choice.html?enc='+enc)">The Final Stage</button>
+	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href=('choice.html?enc='+enc)">The Final Stage</button>
 </body>
 </html>
