--- a/day1.html
+++ b/day1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Day 1 || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Day 1 || The King's Challenge: An Interactive Logic Game</title>
 	<script src="index.js"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
 		translatefake(enc);
 	</script>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Day 1</h2>
 	</div>
 	<p class="prose">Despite your anxiety over your fate and that of your community, you managed to get a good night of sleep due to the comforts of the castle. You make a brief attempt to speak to a guard, but they seem very intimidating and honestly probably not bright enough to help you strategize. You enjoy a nice breakfast and make your way to the royal court, where you feel tremendously underdressed.<br>
