--- a/day1results.html
+++ b/day1results.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Day 1 Results || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Day 1 Results || The King's Challenge: An Interactive Logic Game</title>
 	<script src="index.js"></script>
 </head>
 <body>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Day 1 Results</h2>
 	</div>
 	<p class="prose">The court holds its breath, as do you. The scale wobbles back and forth, and time seems to slow as the movements get smaller and smaller. The difference between the weights of the twelve diamonds are impossibly small to the human touch...<br><br>
