--- a/day3.html
+++ b/day3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Day 3 || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Day 3 || The King's Challenge: An Interactive Logic Game</title>
 	<script src="index.js"></script>
 </head>
 <body>
@@ -15,12 +15,17 @@
 		console.log(placements);
 	</script>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Day 3</h2>
 	</div>
-	<p class="prose">You spent the rest of yesterday enjoying the comforts of the castle, fairly confident that you knew what to do for the remaining two days. Although you couldn't exactly explore due to your armed guard, the rooms you were given to stay in had all sorts of new luxuries, and the food brought to your room was delicious. Only at the end of the night did you realize you really weren't fully prepared for the next day, so you didn't sleep much last night as you tried to make sure you were prepared going forward. The guards seem to like you (although they refuse to speak to you) so they brought you a strange, bitter brown drink and now you haven't slept all night and are talking very quickly but feel like you have this under control! Everything will be fine! You also added a lot of sugar to it and had more this morning! <br>
-	<br>
-	Anyway, you get to the throne room and decide to try and talk to people. <i><b>INSERT MORE PLOT HERE</b></i></p>
+	<p class="prose">
+		Because of all the "coffee" you had yesterday, you fell asleep quickly after getting back to your room and slept for hours. After that, you didn't get a lot of sleep last night; today is the last day of the challenge and so today determines... everything. You ignore everybody else in the courtroom, even the king, who looks annoyed.
+		You have an idea for what to do today, but are you sure that it will work? You don't have time to worry anymore; it is time to make your choice.
+		<br><br>
+		But before you can, the king shouts your name. He wants to know whether you think you will win. You think for a moment about the people in the courtroom yesterday, and remember how rude they were. You have a sudden burst of confidence, and you say that you believe you will win, but that you are not sure that you want to be his advisor; after all, everybody was quite rude yesterday.
+		<br><br>
+		The king is shocked. You are briefly afraid that you have made a terrible mistake, and nobody makes a sound. But then he begins laughing. He says he likes your confidence, and that he is even more interested in having you as his advisor because you are honest with him. He makes you an offer; if you correctly guess which is the fake diamond and whether it weighs more or less, you can either be his advisor and keep the fake diamond as a token of his respect, or you can return home with three of the real diamonds. Before you can respond, he orders you to think about it and that the scales be brought out. It is time for the last weighing.
+	</p>
 	<p class="basic">The twelve diamonds are labeled from 1 to 12. You may place each diamond on the left side, the right side, or not on the scale at all. When you are done, scroll down and press the "Done!" button.</p>
 	<div class="row" style="text-align:center">
 		<div class="column left">
