--- a/fullsuccess.html
+++ b/fullsuccess.html
@@ -3,12 +3,16 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="index.js"></script>
-	<title>Congratulations! || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Congratulations! || The King's Challenge: An Interactive Logic Game</title>
 </head>
 <body>
-	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
-	<h2>Congratulations!</h2>
-	<p class="prose"> ***HAPPILY EVER AFTER***</p>
+	<div class="header">
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
+		<h2>Congratulations!</h2>
+	</div>
+	<p class="prose">
+		The jewellers are the first to erupt in cheers; the rest of the crowd joins in, but you aren't sure whether they are cheering because you were right or because they get to see your punishment. 
+	</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
 	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
 </body>
