--- a/partialsuccess.html
+++ b/partialsuccess.html
@@ -3,12 +3,22 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="index.js"></script>
-	<title>Congratulations-ish || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Congratulations-ish || The King's Challenge: An Interactive Logic Game</title>
 </head>
 <body>
-	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
-	<h2>Congratulations-ish</h2>
-	<p class="prose"> ***MEDIUM HAPPILY EVER AFTER***</p>
+	<div class="header">
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
+		<h2>Congratulations-ish</h2>
+	</div>
+	<p class="prose">
+		The scientists consult, and seem to be arguing back and forth. The judge approaches them, and as they explain the situation to her she frowns. She turns and announces to the court that <b>you guessed the right diamond, but not its weight.</b>
+		<br><br>
+		Even the king is surprised. On the first day, his announcer said that if you guessed incorrectly, your fate would be up to him, but you have clearly shown your intelligence. He thinks for a moment, and looks at the judge before beginning to speak.
+		<br><br>
+		According to the king, you didn't guess correctly, so you should not get the full reward. But because you were still clearly quite intelligent, he wants to keep you near; he orders that you immediately become a general in his army, and his tone makes it clear that this is final. The judge looks like she might disagree, but she says that this seems like an appropriate result. You do not have a choice about this, but being a general will give you a more comfortable life than the one you had before.
+		<br><br>
+		You join the army as a general, and quickly rise through the ranks. Although you went to the king to try and prevent a war entirely, you are at least able to protect your village from the damage. You live a comfortable remainder of your life, but wonder where you went wrong in determining the weight of the fake diamond.
+	</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
 	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
 </body>
