--- a/rules.html
+++ b/rules.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Rules || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Rules || The King's Challenge: An Interactive Logic Game</title>
 </head>
 <body>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Rules</h2>
 	</div>
 	<p class="prose">The king is pleased with your choice; out of this he may gain an advisor, days of entertainment through your efforts to defeat him, or free reign to impose whatever punishment he desires on you. He keeps a small diary next to his throne on which he is brainstorming ideas for your fate should you fail. Should you become his advisor, you may wish to find him some less sadistic journaling ideas.<br>
