--- a/day2.html
+++ b/day2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Day 2 || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Day 2 || The King's Challenge: An Interactive Logic Game</title>
 	<script src="index.js"></script>
 </head>
 <body>
@@ -15,12 +15,14 @@
 		console.log(placements);
 	</script>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Day 2</h2>
 	</div>
 	<p class="prose">You spent the rest of yesterday enjoying the comforts of the castle, fairly confident that you knew what to do for the remaining two days. Although you couldn't exactly explore due to your armed guard, the rooms you were given to stay in had all sorts of new luxuries, and the food brought to your room was delicious. Only at the end of the night did you realize you really weren't fully prepared for the next day, so you didn't sleep much last night as you tried to make sure you were prepared going forward. The guards seem to like you (although they refuse to speak to you) so they brought you a strange, bitter brown drink and now you haven't slept all night and are talking very quickly but feel like you have this under control! Everything will be fine! You also added a lot of sugar to it and had more this morning! <br>
 	<br>
-	Anyway, you get to the throne room and decide to try and talk to people. <i><b>INSERT MORE PLOT HERE</b></i></p>
+	Anyway, you get to the throne room and decide to try and talk to people. They have many questions for you, but their questions show that they are surprised you took the challenge; they think you couldn't be smart enough since you're from a village. This makes you quite angry, so you decide to not bother speaking to them more, but if you win the challenge and become the king's advisor you would have to live with rude people like this...<br>
+	<br>
+	The conversation stops as the king raises his hand. The scale is brought out once again, and it is time to choose.</p>
 	<p class="basic">The twelve diamonds are labeled from 1 to 12. You may place each diamond on the left side, the right side, or not on the scale at all. When you are done, scroll down and press the "Done!" button.</p>
 	<div class="row" style="text-align:center">
 		<div class="column left">
