--- a/day2results.html
+++ b/day2results.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Day 2 Results || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>Day 2 Results || The King's Challenge: An Interactive Logic Game</title>
 	<script src="index.js"></script>
 </head>
 <body>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>Day 2 Results</h2>
 	</div>
-	<p class="prose">The court holds its breath, as do you. The scale wobbles back and forth, and time seems to slow as the movements get smaller and smaller. The difference between the weights of the twelve diamonds are impossibly small to the human touch... <br><br>
+	<p class="prose">The scale wobbles back and forth, and even though this happened just yesterday you are still nervous. Yesterday everybody was quiet, but this time they are all shouting which side they think is going to be heavier. It's very overwhelming, and you are getting a headache so you close your eyes for a second.<br><br>
 	<span id="left-heavier" style="display: none;">
-		But the theatrical size of the scale makes it clear enough that <b>the left side is heavier than the right</b>. You notice that the left arm falls a head lower than the right, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.
+		The shouting turns to cheers, and you open your eyes to see that <b>the left side is heavier than the right</b>. Half of the court looks excited, and the other is disappointed. They seem to have been placing bets on which is heavier. The guards lead you back to your room, and you start planning for the third and final weighing.
 	</span>
 	<span id="right-heavier" style="display: none;">
-		But the theatrical size of the scale makes it clear that <b>the right side is heavier than the left</b>. You notice that the right arm falls a head lower than the left, in fact. You briefly forgot the stakes of this challenge, but putting it in terms of heads reminds you that you may lose yours. You have much to think about tonight as you plan your strategy for the two remaining weighings.
+	The shouting turns to cheers, and you open your eyes to see that <b>the right side is heavier than the left</b>. Half of the court looks excited, and the other is disappointed. They seem to have been placing bets on which is heavier. The guards lead you back to your room, and you start planning for the third and final weighing.
 	</span>
 	<span id="balanced-scale" style="display: none;">
-		And yet, the scales remain level. Scientists from a range of countries carefully approach, pulling out all sorts of instruments to determine whether the two sides truly are equal in weight. The king narrows his eyes, suspecting that you may have cheated, but how? The judge's brow furrows.<br><br>
-		The scientists announce that the scales are level, and <b>the left and right sides are equal in weight</b>. You finally take in a breath that you may have set a record holding, but the king is thrilled with the drama. He orders the guards to return you to your room to plan for the next day but to bring you some mysterious and fragrant invention called "soap," one of the new and innovative luxuries you could enjoy as his advisor.
+		The shouting turns to groans, and you open your eyes to see that the scale has stopped with the scales level. The scientists approach again to confirm, and the king rolls his eyes. The scientists announce that <b>the left and right sides are equal in weight</b>. None of the audience is happy; they all clearly forgot that the two sides could weigh the same. Perhaps you are smarter even though they grew up in the city. The guards lead you back to your room, and you start planning for the third and final weighing.
 	</span>
 	</p>
 	<script>
