--- a/failure.html
+++ b/failure.html
@@ -3,11 +3,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="index.js"></script>
-	<title>oh no || The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>oh no || The King's Challenge: An Interactive Logic Game</title>
 </head>
 <body>
 	<div class="header">
-		<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>.... oh no</h2>
 	</div>
 	<p class="prose"> ***oh no***</p>
