--- a/home.html
+++ b/home.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>The King's Logic Puzzle: An Interactive Logic Game</title>
+	<title>The King's Challenge: An Interactive Logic Game</title>
 </head>
 <body>
 	<div class="header">
-	<h1>The King's Logic Puzzle: An Interactive Logic Game</h1>
+	<h1>The King's Challenge: An Interactive Logic Game</h1>
 	<h2>Introduction</h2>
 	</div>
 	<p class="prose">Once upon a time, in a faraway kingdom, a cruel king ruled the land with an iron fist. Despite his seemingly unlimited power over his subjects, the fear they had for him made them terrible performers in his royal court, so he quickly ran low on entertainment options. <br> 
