--- a/failure.html
+++ b/failure.html
@@ -10,7 +10,7 @@
 		<h1>The King's Challenge: An Interactive Logic Game</h1>
 		<h2>.... oh no</h2>
 	</div>
-	<p class="prose"> ***oh no***</p>
+	<p class="prose" style="text-align: center">u die o no :((((</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
 	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
 </body>
