--- a/fullsuccess.html
+++ b/fullsuccess.html
@@ -12,6 +12,8 @@
 	</div>
 	<p class="prose">
 		The jewellers are the first to erupt in cheers; the rest of the crowd joins in, but you aren't sure whether they are cheering because you were right or because they get to see your punishment. 
+
+		blah blah blah congrats u win yay
 	</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
 	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
