--- a/kingschallenge/failure.html
+++ b/kingschallenge/failure.html
@@ -12,6 +12,6 @@
 	</div>
 	<p class="prose" style="text-align: center">u die o no :((((</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
-	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
+	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='index.html'">Yes!</button>
 </body>
 </html>
