--- a/kingschallenge/partialsuccess.html
+++ b/kingschallenge/partialsuccess.html
@@ -20,6 +20,6 @@
 		You join the army as a general, and quickly rise through the ranks. Although you went to the king to try and prevent a war entirely, you are at least able to protect your village from the damage. You live a comfortable remainder of your life, but wonder where you went wrong in determining the weight of the fake diamond.
 	</p>
 	<p class="basic question">Do you want to try again? (please note that both the fake diamond and its weight change every time you restart)</p>
-	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
+	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='index.html'">Yes!</button>
 </body>
 </html>
