--- a/kingschallenge/ending1.html
+++ b/kingschallenge/ending1.html
@@ -13,6 +13,6 @@
 	<p class="prose">The stakes of the king's challenge are too high. You thought it would be a good idea to challenge the king before, but you decided you would rather not. The king smiles and gestures to his guard, who takes you from the castle. When you return to the village, everybody is excited to see you! Have you saved them from their horrible fates?<br><br>
 	Unfortunately, you have to tell them that you took the easy way out. The next day, the king declares war on the kingdom to the west, and his ministers come to sign up your village for the army. You survive the war, but many of your friends and family do not, and you regret deciding not to accept the challenge every day for the rest of your short life (you only live to twenty-seven).</p>
 	<p class="basic question">Do you want to try again?</p>
-	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='home.html'">Yes!</button>
+	<button type="button" style="display: block; margin: 0 auto;" class="proceed" onclick="location.href='index.html'">Yes!</button>
 </body>
 </html>
