--- a/kingschallenge/choice.html
+++ b/kingschallenge/choice.html
@@ -23,7 +23,7 @@
 	<p class="basic">
 		Select which diamond you believe is fake below.
 	</p>
-	<div class="diamondchoices" style="margin: auto; width: 830px">
+	<div class="diamondchoices" style="margin: auto; text-align: center;">
 		<button type="button" class="diamondbutton" id="d1" onclick="dchoose(1)"> 1 </button>
 		<button type="button" class="diamondbutton" id="d2" onclick="dchoose(2)"> 2 </button>
 		<button type="button" class="diamondbutton" id="d3" onclick="dchoose(3)"> 3 </button>
